Fix icon in table alignment

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -505,6 +505,7 @@ svg {
     padding: 3px;
   }
   word-break: break-all;
+  line-height: 20px;
 }
 
 .gray {
